--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
-  <title>finix -2021 by riaz</title>
+  <title>Finix - 2021 by Akram Sakib</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
@@ -70,19 +70,13 @@
     <div class="col-lg-6">
       <div class="banner-header">
         <h5>We are here for</h5>
-
         <h1>We believe in those made to do more</h1>
         <p class="w-75">Loans are advantageous as a relatively inexpensive way of borrowing money.
           Start or grow your own business</p>
       </div>
-
       <div class="search-header-button xxcx">
-
         <a href="" class="btn btn-primary">View More</a>
-
       </div>
-
-
       <div class="icon-parts">
         <ul class="d-flex">
           <span>follow us</span>
